syntax = "proto3";

option  csharp_namespace = "GrpcProduct";

service ProductService {
	rpc GetAll(PaginationArgs) returns (PaginationProducts) {}
	rpc GetOne(ProductPk) returns (ProductsResponse) {}
	rpc Save(ProductRequest) returns (ProductsHandler) {}
	rpc Update(ProductUpdate) returns (ProductsHandler) {}
	rpc Delete(ProductPk) returns (Void) {}
}

message PaginationArgs {
	optional int32 offset = 1;
	optional int32 limit = 2;
}

message ProductsResponse {
	string id = 1;
	string name = 2;
	double price = 3;
	int32 stock = 4;
}


message ProductRequest {
	string name = 1;
	double price = 2;
	int32 stock = 3;
}

message ProductUpdate {
	string id = 1;
	ProductRequest product = 2;
}

message ProductPk {
	string id = 1;
}

message Void {}

message PaginationProducts {
	repeated ProductsResponse products = 1;
	int32 total_items = 2;
}

message ProductsHandler {
	optional ProductsResponse product = 1;
	bool is_error = 2;
	repeated string errors = 3;
}